# leetcode

./: INDEX.md  QUICKSTART.md  QUICKSTART_TASTY.md  README.md  SETUP_COMPLETE.md  START_HERE.md  TASTY_SETUP.md  TESTING_WITH_TASTY.md  WORKFLOW.md  a.ts  cabal-repl-init.ghci  cabal.project  leetcode.cabal  repl.sh
scripts/: new-problem.py  new-problem.sh
src/: Helpers.hs  MyLib.hs
src/Solutions/: P3691.hs
test/: Main.hs
test/Problems/: P3691.hs
