cabal-version:      3.14
name:               leetcode
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Benjamin Voca
maintainer:         Benjamin-MacBook-Pro.local
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
    build-depends:
         optics ^>= 0.4.2.1
        ,containers ^>=0.7
        ,tasty ^>= 1.4
        ,tasty-hunit ^>= 0.10
        ,text ^>= 2.1.3
        ,megaparsec ^>= 9.7.0
        ,fgl ^>= 5.8.3.0
        ,vector ^>= 	0.13.2.0
library
    import:           warnings
    exposed-modules:
        MyLib,
        Helpers,
        Solutions.P3691
    -- other-modules:
    -- other-extensions:
    build-depends:     base ^>=4.21.0.0
    hs-source-dirs:   src
    default-language: GHC2024

executable leetcode
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        leetcode

    hs-source-dirs:   app
    default-language: GHC2024

test-suite leetcode-test
    import:           warnings
    default-language: GHC2024
    other-modules:
        Problems.P3691
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0,
        leetcode
